# bird_project

./: CMakeLists.txt  README.md
include/: barrier.h  bird.h  button.h  game.h  menu.h
src/: barrier.cpp  bird.cpp  button.cpp  game.cpp  gameoverwindow.cpp  main.cpp  menu.cpp
